--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="style.css">
 		<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 	</head>
-<body class="lightMode">
+<body class="darkMode">
 	<div class="layout">
 		<div class="navOpener">
 			<div class="holder">
@@ -26,10 +26,12 @@
 			<div class="holder">
 				<div class="navCont">
 					<a href="#me">About me</a>
+					<a href="#langs">Spoken languages</a>
 					<a href="#proj">Projects</a>
-					<a href="#tech">Utilised technologies</a>
+					<a href="#tech">Skillset</a>
 					<a href="#hist">Working history</a>
-					<a href="#hobi">Hobies</a>
+					<a href="#hobi">Hobbies</a>
+					<a href="#colab">Collaborate or Hire me</a>
 					<a href="javascript:void(0);" id="info-left-nav">Info</a>
 					<p><b>phone: </b>+385 91 727 9398</p>
 					<p><b>education: </b>Third-year Computer Science student at FERIT</p>
@@ -41,10 +43,12 @@
 			<main>
 				<nav id="nav2">
 					<a href="#me">About me</a>
+					<a href="#langs">Spoken languages</a>
 					<a href="#proj">Projects</a>
-					<a href="#tech">Utilised technologies</a>
-					<a href="#hist">Workinghistory</a>
-					<a href="#hobi">Hobies</a>
+					<a href="#tech">Skillset</a>
+					<a href="#hist">Working history</a>
+					<a href="#hobi">Hobbies</a>
+					<a href="#colab">Collaborate or Hire me</a>
 				</nav>
 				<header>
 					<h1>Martin Tomašković</h1>
@@ -57,6 +61,13 @@
 				<section>
 					<h2 id="me">About me</h2>
 					<p>I have experience working across multiple operating systems, including Linux and Windows, and I am skilled in both frontend and backend web development. I possess a strong understanding of web APIs, asynchronous programming, and smart contract development (specifically for the Ethereum network). Additionally, I have expertise in creating standalone frontend applications that don’t require backend communication, as well as experience in local blockchain development environments. Programming and coding are my passions, and I actively engage in these pursuits during my free time.</p>
+				</section>
+				<section>
+					<h2 id="langs">Spoken languages</h2>
+					<ul>
+						<li><b>Croatian: </b>Native language</li>
+						<li><b>English: </b>Advanced level</li>
+					</ul>
 				</section>
 				<section>
 					<h2 id="proj">Projects</h2>
@@ -78,14 +89,19 @@
 					</p>
 				</section>
 				<section>
-					<h2 id="tech">Utilised technologies</h2>
+					<h2 id="tech">Skillset</h2>
 					<ul>
 						<li><b>c</b></li>
-						<li><b>c++</b></li>
-						<li>sfml, sdl2, glfw, glad, assimp, glm</li>
 						<li><b>python</b></li>
+						<li>A bit of knowledge in ML</li>
+						<li><b>c++</b></li>
+						<li>sfml, sdl2, glfw, glad, assimp, glm, make...</li>
+						<li><b>html, css, js, solidity</b></li>
+						<li><b>node</b></li>
+						<li>env, express, fastify, uuid, typeorm...</li>
 						<li><b>linux</b></li>
 						<li>arch based, debian based</li>
+						<li><b>git</b></li>
 					</ul>
 				</section>
 				<section>
@@ -98,21 +114,23 @@
 					</ul>
 				</section>
 				<section>
-					<h2 id="hobi">Hobies</h2>
+					<h2 id="hobi">Hobbies</h2>
 					<div class="hoby">Swimming</div>
-					<div class="hoby">Learning japanese</div>
 					<div class="hoby">Watching movies</div>
 					<div class="hoby">Game programming</div>
-					<div class="hoby">Hanging out</div>
+					<div class="hoby">Socializing</div>
 					<div class="hoby">Math</div>
 					<div class="hoby">Electronics</div>
 				</section>
+				<section>
+					<h2 id="collab">Collaborate or Hire me <b class="fa-brands fa-square-whatsapp"></b></h2>
+					<ul>
+						<li><b>phone: </b>+385 91 727 9398</li>
+						<li><b>email: </b>martin.tomaskovic1@gmail.com</li>
+						<li>Messaging is preferred for quicker response</li>
+					</ul>
+				</section>
 			</main>
-			<footer>
-				<div class="cont">
-					<p>&copy; Martin Tomašković</p>
-				</div>
-			</footer>
 		</div>
     </div>
 	<div class="frame">
